fix(style.css): force align all in checkbox

--- a/static/style.css
+++ b/static/style.css
@@ -9,6 +9,7 @@ body {
 	overflow: hidden;
 }
 
-li > input {
-	vertical-align: middle;
+.article-content > ul > li > * {
+	    vertical-align: middle;
 }
+
